# SynNet

./: .gitignore  .pre-commit-config.yaml  INSTRUCTIONS.md  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: linting.yml
data/assets/reaction-templates/: hb.txt
scripts/: 00-extract-smiles-from-sdf.py  01-filter-building-blocks.py  02-compute-embeddings.py  03-generate-syntrees.py  04-filter-syntrees.py  20-inference.py  21-identify-similar-fps.py  22-compute-mrr.py  23-evaluate-predictions.py  90-clean-chembl.py  optimize_ga.py
src/synnet/: __init__.py  config.py  datasets.py  main_client.py
src/synnet/data/: datasets.py  utils.py
src/synnet/data_generation/: __init__.py  check_all_template.py  exceptions.py  preprocessing.py  syntrees.py
src/synnet/decoding/: __init__.py  decoder.py
src/synnet/diffusion/: diffusion.py  modules.py  utils.py
src/synnet/encoding/: __init__.py  distances.py  drfp.py  embedding.py  fingerprints.py  (+1 more)
tests/: __init__.py  test_datasets.py  test_drfp.py  test_encoding.py  test_models.py  test_syntree.py  test_syntree_collection.py
tests/assets/: syntree-small-simple-1-chopped.json  syntree-small-simple-1.json  syntree-small-simple-2-chopped.json  syntree-small-simple-2.json  syntree-small-simple-3-chopped.json  syntree-small-simple-3.json  syntree-small-simple-chopped.json  syntree-small-simple.json  syntree-small.json
tests/test_datasets/: __init__.py
tests/test_encodings/: __init__.py
tests/test_models/: __init__.py  test_models.py
tests/test_utils/: __init__.py
(+25 files in other folders)
