[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["dependencies"]
name = "synnet"
authors = [

    {name = "Wenhao Gao"},
    {name = "Christian Ulmer"},
    {name = "Christian W. Feldmann"}
]
version = "0.2.0"
description = "Synthetic tree generation using neural networks."
readme = "README.md"
requires-python = ">=3.9"

[project.urls]
homepage = "https://example.com"
repository = "https://github.com/your-username/synnet"

[project.scripts]
synnet = "synnet.main_client:synnet"

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}

[tool.setuptools.package-data]
"synnet" = ["py.typed"]
